<resources>
    <string name="app_name" translatable="false">H2O Healthy</string>
    <string name="h2o" translatable="false">H2O</string>
    <string name="healthy" translatable="false">Healthy</string>
    <string name="slogan">Stay hydrated</string>
    <string name="hi">Hey there,</string>
    <string name="create_account">Create an Account</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="policy_text">By continuing you accept our Privacy Policy and Term of Use</string>
    <string name="get_started">Get Started</string>
    <string name="login_title">Welcome Back</string>
    <string name="forgot_password"><u>Forgot your password?</u></string>
    <string name="login">Login</string>
    <string name="don_t_have_account">Don’t have an account yet?</string>
    <string name="register">Register</string>
    <string name="have_account">Already have an account?</string>
    <string name="or">Or</string>
    <string name="next">Next</string>
    <string name="complete_profile_title">Let’s complete your profile</string>
    <string name="complete_profile_description">It will help us to know more about you!</string>
    <string name="welcome">Welcome,</string>
    <string name="go_to_home">Go To Home</string>
    <string name="login_done_text">You are all set now, let’s reach your \n goals together with us</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="add">add</string>
    <string name="added">Added</string>
    <string name="myket">Myket is not installed</string>
    <string name="today_target">Today Target</string>
    <string name="edit">Edit</string>
    <string name="age">Age</string>
    <string name="weight">Weight</string>
    <string name="height">Height</string>
    <string name="total_score">Total score</string>
    <string name="league">League</string>
    <string name="account">Account</string>
    <string name="contact_us">Contact Us</string>
    <string name="other">Other</string>
    <string name="add_water">Add water</string>
    <string name="enter_amount">Enter amount (ml)</string>
    <string name="select_cup">Select cup</string>
    <string name="done">Done</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="submit">Submit</string>
    <string name="activity_level">Activity level</string>
    <string name="choose_gender">Choose Gender</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="your_weight">Your Weight</string>
    <string name="your_height">Your Height</string>
    <string name="kg" translatable="false">KG</string>
    <string name="cm" translatable="false">CM</string>
    <string name="create_league">Create League</string>
    <string name="enter_league_name">Enter league name</string>
    <string name="join_league">Join League</string>
    <string name="create">Create</string>
    <string name="enter_league_code">Enter league code</string>
    <string name="join">Join</string>
    <string name="league_settings">League Settings</string>
    <string name="rename_league">Rename League</string>
    <string name="rename">Rename</string>
    <string name="share">Share</string>
    <string name="leave_league">Leave League</string>
    <string name="remove">Remove</string>
    <string name="removed">Removed</string>
    <string name="enter_new_value">Enter new value</string>
    <string name="my_cups">My Cups</string>
    <string name="add_cup">Add Cup</string>
    <string name="enter_cup_name">Enter cup name</string>
    <string name="select_color">Select color</string>
    <string name="logout">Logout</string>
    <string name="comment">Add Comment</string>
    <string name="lastMonth">Last 30 Days</string>
    <string name="dailyAverage">Daily Average</string>
    <string name="averageHours">Average Water per hours</string>
    <string name="allTime">All time</string>
    <string name="chooseAvatar">Choose Avatar</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="activityProgress">Activity Progress</string>
    <string name="latestActivity">Latest Activity</string>
    <string name="selected_cup">Cup Selected</string>
    <string name="colorSelected">Color is selected</string>
    <string name="enterWeight">Enter Weight</string>
    <string name="enterHeight">Enter Height</string>
    <string name="errorWeight">Enter correct number for weight</string>
    <string name="errorHeight">Enter correct number for height"</string>

    <string name="emptyEmail">Email is empty</string>
    <string name="emptyPassword">Password is empty</string>
    <string name="errorEmail">Email is not valid</string>
    <string name="errorPassword">password is short</string>
    <string name="emptyName">Name is empty</string>
    <string name="errorName">name is short</string>
    <string name="emptyDate">Enter Birthdate</string>
    <string name="errorLeagueName">name can only be letters, digits and dashes</string>
    <string name="emailClient">Choose an Email client :</string>
    <string name="errorEmailClient">There are no email clients installed.</string>

    <string name="notificationTitle">It\'s Drinking Time!</string>
    <string name="notificationText">Hurry up and drink some water 😉</string>
    <string name="permissionText">This App needs notification permission to remind you to drink water</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="saved">Saved</string>
    <string name="add_reminder">Add Reminder</string>
    <string name="enable_reminder">Enable Reminder</string>
    <string name="notification_interval_in_hours">Notification interval in hours:</string>
    <string name="save">Save</string>
    <string name="noData">There is no data</string>

    <string name="newPass">New Password</string>
    <string name="resetPass">Reset Password</string>


    <string name="madeBy">Made By</string>
</resources>