<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layoutDirection="ltr"
    android:background="@drawable/dialog_background"
    android:padding="32dp">

    <TextView
        android:id="@+id/_textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/bold"
        android:padding="4dp"
        android:text="@string/add_cup"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ivClose"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:padding="4dp"
        android:src="@drawable/ic_close"
        app:layout_constraintBottom_toBottomOf="@+id/_textView3"
        app:layout_constraintDimensionRatio="1"
        app:layout_constraintEnd_toStartOf="@+id/_textView3"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/_textView3" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cvName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="4dp"
        app:cardCornerRadius="16dp"
        app:cardElevation="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/_textView3"
        app:strokeColor="@color/transparent"
        app:strokeWidth="2dp">

        <EditText
            android:id="@+id/etName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:fontFamily="@font/regular"
            android:hint="@string/enter_cup_name"
            android:importantForAutofill="no"
            android:padding="16dp"
            android:textAlignment="center"
            android:textColor="@color/blackText"
            android:textSize="14sp" />
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cvAmount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="4dp"
        app:cardCornerRadius="16dp"
        app:cardElevation="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cvName"
        app:strokeColor="@color/transparent"
        app:strokeWidth="2dp">

        <EditText
            android:id="@+id/etAmount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:fontFamily="@font/regular"
            android:hint="@string/enter_amount"
            android:importantForAutofill="no"
            android:inputType="number"
            android:padding="16dp"
            android:textAlignment="center"
            android:textColor="@color/blackText"
            android:textSize="14sp" />
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cvColor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="4dp"
        android:clickable="true"
        app:cardCornerRadius="16dp"
        app:cardElevation="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cvAmount"
        app:strokeColor="@color/transparent"
        app:strokeWidth="2dp">

        <EditText
            android:id="@+id/etColor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:focusable="false"
            android:fontFamily="@font/regular"
            android:importantForAutofill="no"
            android:inputType="number"
            android:padding="16dp"
            android:text="@string/select_color"
            android:textAlignment="center"
            android:textColor="@color/blackText"
            android:textSize="14sp" />
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/bDone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="4dp"
        android:fontFamily="@font/semi_bold"
        android:padding="16dp"
        android:text="@string/done"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:backgroundTint="@color/linearBlueStart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cvColor" />
</androidx.constraintlayout.widget.ConstraintLayout>
